<resources>
    <string name="app_name">Citizen Engagement App</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_to_the_citizen_engagement_app">Welcome to the Citizen Engagement App.</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="ward_no">Ward No.</string>
    <string name="address">Address</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="logout">Log Out</string>
    <string name="user_profile">User Profile</string>
    <string name="three_dot_menu">Three Dot Menu</string>
</resources>