<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/welcome_to_the_citizen_engagement_app"
        android:textColor="#9C27B0"
        android:textSize="24sp"
        android:padding="10dp"
        android:gravity="center" />

    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#9C27B0"
        android:layout_alignParentTop="true">

        <!-- Spacer to push buttons to the right -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Sign In Button -->
        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="#FFFFFF"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:textSize="16sp"/>

        <!-- Sign Up Button -->
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:textSize="16sp"/>

    </LinearLayout>


</RelativeLayout>
